css basics div added

--- a/css/index.html
+++ b/css/index.html
@@ -11,5 +11,10 @@
     <h1 id="hero">I am your bhaiya</h1>
     <h5 class="lnct">I am always with you!</h5>
     <h1 id="love">I love you all</h1>
+
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim voluptatum perferendis aspernatur? Saepe dolorem, veniam dolore minima inventore tenetur sequi ab illo. Ea earum ratione voluptatem. Ipsum molestias consectetur eius?</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
 </body>
 </html>
